Fix: 注释与提醒格式

--- a/docs/数据层与业务层分离.md
+++ b/docs/数据层与业务层分离.md
@@ -100,7 +100,7 @@ export class DatasetManager {
 	 * @param  {string} route 路径
 	 * @param  {Entity[]} entities 数据
 	 * @param  {IndexConfig[]} indexConfigs? 索引结构
-	 * @param  {boolean} reset? 是否重建
+	 * @param  {boolean} reset? 是否清空重建
 	 */
 	public static Create(route: string, entities: Entity[], indexConfigs?: IndexConfig[], reset?: boolean) {
 		let created = EnsureCreated(route);
@@ -119,8 +119,46 @@ export class DatasetManager {
 				}
 			}
 			Logger.info(`Dataset:${route} created.`, "DatasetManager", "Create");
+		} else {
+			if (indexConfigs) {
+				let currentIndexes = Object.keys(Memory.datasets[route]);
+				let newIndexConfigs = indexConfigs.filter(config => !currentIndexes.includes(config.indexName));
+				if (newIndexConfigs.length > 0) {
+					const entities = _.flattenDeep(Object.values(Memory.datasets[route]["id"].data));
+					for (const indexConfig of newIndexConfigs) {
+						Memory.datasets[route][indexConfig.indexName] = {
+							clusterd: indexConfig.clustered,
+							data: {}
+						};
+					}
+					for (const entity of entities) {
+						for (const indexConfig of newIndexConfigs) {
+							const indexName = indexConfig.indexName;
+							const value = (entity as any)[indexName];
+							if (value == undefined) {
+								continue;
+							}
+							const index = Memory.datasets[route][indexName];
+							if (index.clusterd) {
+								// 聚集索引全量存储
+								if (index.data[value]) {
+									index.data[value].push(entity);
+								} else {
+									index.data[value] = [entity];
+								}
+							} else {
+								// 非聚集只存储主键列
+								if (index.data[value]) {
+									index.data[value].push(entity.id);
+								} else {
+									index.data[value] = [entity.id];
+								}
+							}
+						}
+					}
+				}
+			}
 		}
-        // todo 中途新建索引
 		// 插入数据
 		for (const entity of entities) {
 			this.Add(route, entity);
@@ -134,13 +172,13 @@ export class DatasetManager {
 	public static Add(route: string, entity: Entity) {
 		let created = EnsureCreated(route);
 		if (!created) {
-			Logger.error(`Adding ${JSON.stringify(entity)} to a non-existing dataset ${route}`, "DatasetManager", "Add");
+			Logger.error(`Adding ${JSON.stringify(entity)} to a non-existing dataset:${route}`, "DatasetManager", "Add");
 			return;
 		}
 		const indexNames = Object.keys(Memory.datasets[route]);
 		for (const indexName of indexNames) {
 			const value = (entity as any)[indexName];
-			if (!value) {
+			if (value == undefined) {
 				continue;
 			}
 			const index = Memory.datasets[route][indexName];
@@ -161,10 +199,11 @@ export class DatasetManager {
 			}
 		}
 	}
+
 	public static Remove(route: string, entity: Entity) {
 		let created = EnsureCreated(route);
 		if (!created) {
-			Logger.error(`Removing ${JSON.stringify(entity)} from a non-existing dataset ${route}`, "DatasetManager", "Remove");
+			Logger.error(`Removing ${JSON.stringify(entity)} from a non-existing dataset:${route}`, "DatasetManager", "Remove");
 			return;
 		}
 		const indexNames = Object.keys(Memory.datasets[route]);
@@ -179,16 +218,18 @@ export class DatasetManager {
 				// 主键直接删除记录
 				delete index.data[value];
 			} else {
-				index.data[value] = _.remove(index.data[value], (x) => (x.id == entity.id));
+				//index.data[value] = _.filter(index.data[value],(id)=>{id != entity.id})
+				_.remove(index.data[value], (x) => (x == entity.id));
 				if (index.data[value].length == 0) delete index.data[value];
 			}
 
 		}
 	}
+
 	public static Update(route: string, entity: Entity) {
 		let created = EnsureCreated(route);
 		if (!created) {
-			Logger.error(`Updating ${JSON.stringify(entity)} from a non-existing dataset ${route}`, "DatasetManager", "Update");
+			Logger.error(`Updating ${JSON.stringify(entity)} from a non-existing dataset:${route}`, "DatasetManager", "Update");
 			return;
 		}
 		const indexNames = Object.keys(Memory.datasets[route]);
@@ -238,102 +279,13 @@ export class DatasetManager {
 				return lookup as T[];
 			}
 		} else {
-            // 没有索引，只能在主键聚集索引上搞filter
-            if (Memory.datasets[route]["id"]) {
-                return Object.Values(Memory.datasets[route]["id"].data).filter(e=>e[property] == value) as T[];
-            }else{
-                return [];
-            }
-        }
-		return [];
-	}
-}
-```
-
-### 业务上下文
-
-功能：
-
-1.  定义对象集合的数据结构，索引
-
-2.  初始化对象集合
-
-3.  封装增删改查接口，出入参设置为强类型对象（这步相当于ORM）
-
-4.  索引列单独设置查询方法
-
-5.  强类型对象的快捷创建方法
-
-代码示例：
-``` typescript
-// TransferTaskManager.ts
-import { DatasetManager } from "../utils/DatasetManager";
-import { ContextBase } from "./ContextBase";
-
-interface TransferTask extends Entity {
-	fromId: string,
-	fromRoomName: string,
-	fromX: number,
-	fromY: number,
-	toId: string,
-	toRoomName: string,
-	toX: number,
-	toY: number,
-	resourceType: ResourceConstant,
-	amount: number
-}
-
-export class TransferTaskContext extends ContextBase {
-	static route: string = "transferTask";
-	public static Initialize() {
-		DatasetManager.Create(this.route, [],
-			[{
-				clustered: false,
-				indexName: "fromRoomName"
-			}, {
-				clustered: false,
-				indexName: "toRoomName"
-			}], false);
-	}
-
-	public static Create(from: { pos: RoomPosition, id: string }, to: { pos: RoomPosition, id: string }, resourceType: ResourceConstant, amount: number) {
-		let transferTask: TransferTask = {
-			id: _.uniqueId(Game.time.toString ()),
-			fromId: from.id,
-			fromRoomName: from.pos.roomName,
-			fromX: from.pos.x,
-			fromY: from.pos.y,
-			toId: to.id,
-			toRoomName: to.pos.roomName,
-			toX: from.pos.x,
-			toY: from.pos.y,
-			resourceType: resourceType,
-			amount: amount
+			if (Memory.datasets[route]["id"]) {
+				let data = _.flattenDeep(Object.values(Memory.datasets[route]["id"].data));
+				return data.filter(e => e[property] == value) as T[];
+			} else {
+				return [] as T[];
+			}
 		}
-		return transferTask;
-	}
-
-	public static Get(id: string) {
-		return DatasetManager.GetById<TransferTask>(this.route, id);
-	}
-
-	public static GetByFromRoomName(roomName: string) {
-		return DatasetManager.GetByProperty<TransferTask>(this.route, "fromRoomName", roomName);
-	}
-	public static GetByToRoomName(roomName: string) {
-		return DatasetManager.GetByProperty<TransferTask>(this.route, "toRoomName", roomName);
-	}
-
-	public static Add(transferTask: TransferTask) {
-		DatasetManager.Add(this.route, transferTask);
-	}
-
-	public static Remove(entity: TransferTask) {
-		DatasetManager.Remove(this.route, entity);
-	}
-
-	public static Update(entity: TransferTask) {
-		DatasetManager.Update(this.route, entity);
 	}
 }
 ```
