Add: 异步执行框架1.0
肝爆了

--- a/docs/数据层与业务层分离.md
+++ b/docs/数据层与业务层分离.md
@@ -256,7 +256,7 @@ export class DatasetManager {
 		EnsureCreated(route);
 		if (Memory.datasets[route]["id"]) {
 			let result = Memory.datasets[route]["id"].data[id];
-			return result[0] as T;
+			return result?result[0] as T:undefined;
 		}
 		return undefined;
 	}
